Fixed new design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,18 +3,19 @@
 
     <string name="camera_button">"Scan"</string>
     <string name="result_title_label">Result:</string>
-    <string name="info_label">Scan acceptable QR codes:\n
-        - WiFi\n
-        - vCard\n
-        - Email\n
-        - URL\n
-        Otherwise, the app will display the barcode number.
-    </string>
+    <string name="info_label">Scan QR codes for detailed information:\n
+        - WiFi networks\n
+        - vCards (Contact information)\n
+        - Emails\n
+        - URLs (Web links)\n
+        For other QR codes, the app will display the raw barcode number.
+</string>
     <string name="email_details">Email Details\n\nEmail: %1$s\nSubject: %2$s\nBody: %3$s</string>
     <string name="vcard_details">VCard Details\n\nTitle: %1$s\nOrganization: %2$s\nName: %3$s\nPhone: %4$s</string>
     <string name="url_details">URL Details\n\nTitle: %1$s\nUrl: %2$s</string>
     <string name="wifi_network_details">Wi-Fi Network Details\n\nSSID: %1$s\nPassword: %2$s\nEncryptionType: %3$s</string>
-    <string name="raw_value">Raw Value: %1$s</string>
+    <string name="raw_value">Click the number to view the result: %1$s</string>
+    <string name="raw_value_empty">No Raw Value</string>
 
 
     <string name="no_qr_code_detected">No QR code was detected. Please take the image again.</string>
